[gd_scene load_steps=9 format=2]

[ext_resource path="res://RogueLikeGame/assets/dummy.png" type="Texture" id=1]
[ext_resource path="res://RogueLikeGame/Characters/Enemies/Dummy.gd" type="Script" id=2]
[ext_resource path="res://RogueLikeGame/assets/dummyhit2.png" type="Texture" id=3]
[ext_resource path="res://RogueLikeGame/assets/dummyhit1.png" type="Texture" id=4]
[ext_resource path="res://RogueLikeGame/HitboxesAndHurtboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://RogueLikeGame/assets/metal-pipe-falling-sound-effect-By-Tuna.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 12.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "hitanimate",
"speed": 50.0
} ]

[node name="Dummy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.5, -17.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -6 )
frames = SubResource( 2 )
animation = "hitanimate"
frame = 1

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 0.874

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="Hurtbox"]
